# deps-rs

./: .gitignore  Cargo.toml  README.MD  pre-commit
assets/: main.sass
fixture/: manifest.toml
src/: analyze.rs  command.rs  database.rs  fetch.rs  logger.rs  main.rs  model.rs  parser.rs  process.rs  version.rs
src/fetch/: cache.rs  mod.rs
src/view/: data.rs  html.rs  mod.rs  status.rs
templates/: base.html  crate_section.html  crate_status.html  dependencies_table.html  repo_status.html  server_error.html
