[package]
name = "deps-rs"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
actix-web = "2.0.0-rc"
actix-rt = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
log = { version = "0.4.8", features = ["serde"] }
fern = { version = "0.5.9", features = ["colored"] }
chrono = "0.4.10"
badge = "0.2.0"
