[package]
name = "deps-rs"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
log = { version = "0.4.8", features = ["serde"] }
fern = { version = "0.5.9", features = ["colored"] }
chrono = { version = "0.4.10", features = ["serde"] }
badge = "0.2.0"
semver = { version = "0.9.0", features = ["serde"] }
indexmap = { version = "1.3.0", features = ["serde-1"] }
reqwest = { version = "0.10.1", features = ["gzip"] }
lazy_static = "1.4.0"
futures = "0.3.1"
bytes = "0.5.3"
structopt = "0.3.7"
url = "2.1.1"
git2 = "0.11.0"
serde_json = "1.0.44"
humantime = "1.3.0"
sled = "0.30.3"
bincode = "1.2.1"
rustsec = { git = "https://github.com/DCjanus/rustsec-crate.git" }
