[package]
name = "deps-rs"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
log = { version = "0.4.8", features = ["serde"] }
fern = { version = "0.5.9", features = ["colored"] }
chrono = { version = "0.4.10", features = ["serde"] }
badge = "0.2.0"
semver = { version = "0.9.0", features = ["serde"] }
indexmap = { version = "1.3.2", features = ["serde-1"] }
reqwest = { version = "0.10.1", features = ["gzip"] }
futures = "0.3.4"
bytes = "0.5.4"
structopt = "0.3.9"
url = "2.1.1"
git2 = "0.11.0"
serde_json = "1.0.48"
humantime = "2.0.0"
sled = "0.31.0"
bincode = "1.2.1"
rustsec = "0.18.0"
sass-rs = "0.2.2"
actix-files = "0.2.1"
askama = "0.9.0"
once_cell = "1.3.1"
lru = "0.4.3"
